# nnl

./: .gitignore  ADOPTION_PLAN.md  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  opencode.json  wrangler.jsonc
.github/workflows/: ci.yml  deploy.yml  docs.yml  release.yml  security.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
book/: 404.html  DESIGN.html  cli.html  codegen.html  examples.html  getting-started.html  index.html  language-reference.html  onnx-import.html  print.html  searcher-c2a407aa.js  searchindex-43470c61.js  styles.css  toc-2fcfd6ca.js  toc.html  weights.html
docs/: book.toml  cli.md  codegen.md  language-reference.md
docs/src/: DESIGN.md  README.md  SUMMARY.md  cli.md  codegen.md  examples.md  getting-started.md  onnx-import.md  release-notes.md  weights.md
examples/: mnist.nnl  resnet_block.nnl  verify_mlp.sh
examples/binary_classifier/: binary_classifier.nnl
examples/feature_extractor/: feature_extractor.nnl
examples/import_test/: gen_mlp.py
examples/inception_module/: inception_module.nnl
examples/integration/: README.md  model.nnl
examples/mnist/: expected_output.npy  mnist.nnl  test_input.npy
examples/model/: expected_output.npy  model.nnl
scripts/: generate-release-notes.sh
spec/: motivation.md  onnx-import-and-real-world-models.md  specification.md  todo-prelaunch.md
src/: cli.rs  diag.rs  driver.rs  main.rs  scaffold.rs
tests/: compile.rs  new.rs  sema.rs  weights.rs
website/: index.html  styles.css
(+45 files in other folders)
