[package]
name = "nnc"
version = "0.1.0"
edition = "2024"
description = "Compiler for the NNL (Neural Network Language)"

[dependencies]
clap = { version = "4", features = ["derive"] }
logos = "0.15"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
indexmap = "2"
petgraph = "0.7"
npyz = { version = "0.9", features = ["npz"] }

[dev-dependencies]
insta = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
zip = "0.6"
