[package]
name = "nnlang"
version = "0.2.0"
edition = "2024"
description = "Compiler for the NNLang (Neural Network Language)"
license = "Apache-2.0"
repository = "https://github.com/gdesouza/nnl"
homepage = "https://nnl-lang.org"
readme = "README.md"
keywords = ["neural-network", "compiler", "inference", "embedded", "onnx"]
categories = ["compilers", "science", "embedded"]

[dependencies]
clap = { version = "4", features = ["derive"] }
logos = "0.15"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
indexmap = "2"
petgraph = "0.7"
npyz = { version = "0.9", features = ["npz"] }
tempfile = "3"
prost = "0.13"

[dev-dependencies]
insta = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
zip = "0.6"

[[bin]]
name = "nnc"
path = "src/main.rs"
